--- a/.github/workflows/cicd.workflow.yml
+++ b/.github/workflows/cicd.workflow.yml
@@ -33,7 +33,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
-          REPOSITORY: reg-app-repository
+          REPOSITORY: java-code-with-maven
         run: |
           # Build a docker container and
           # push it to ECR so that it can
@@ -45,13 +45,13 @@ jobs:
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: reg-app-task-definition.json
-          container-name: reg-app-1-oct
+          task-definition: task2.json
+          container-name: ecs-github-action
           image: ${{ steps.build-image.outputs.image }}    
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: reg-app-service-1oct
-          cluster: DevCluster-reg-app-1-oct
+          service: task-service1
+          cluster: ecs
           wait-for-service-stability: true
