--- a/.github/workflows/cicd.workflow.yml
+++ b/.github/workflows/cicd.workflow.yml
@@ -40,7 +40,7 @@ jobs:
           # be deployed to ECS.
           docker build -t java-code-with-maven .
           docker tag java-code-with-maven:latest 841515711664.dkr.ecr.ap-south-1.amazonaws.com/java-code-with-maven:latest
-          docker push 841515711664.dkr.ecr.ap-south-1.amazonaws.com/java-code-with-maven:latestw
+          docker push 841515711664.dkr.ecr.ap-south-1.amazonaws.com/java-code-with-maven:latest
           echo "image=$ECR_REGISTRY/$REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT     
           
       - name: Fill in the new image ID in the Amazon ECS task definition
