--- a/.github/workflows/cicd.workflow.yml
+++ b/.github/workflows/cicd.workflow.yml
@@ -38,10 +38,9 @@ jobs:
           # Build a docker container and
           # push it to ECR so that it can
           # be deployed to ECS.
-          docker build -t java-code-with-maven .
-          docker tag java-code-with-maven:latest 841515711664.dkr.ecr.ap-south-1.amazonaws.com/java-code-with-maven:latest
-          docker push 841515711664.dkr.ecr.ap-south-1.amazonaws.com/java-code-with-maven:latest
-          echo "image=$ECR_REGISTRY/$REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT     
+          docker build -t $ECR_REGISTRY/$REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$REPOSITORY:$IMAGE_TAG
+          echo "image=$ECR_REGISTRY/$REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT    
           
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
@@ -54,6 +53,6 @@ jobs:
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: task-service1
-          cluster: ecs
+          service: task-service-1-oct
+          cluster: ecs-cluster
           wait-for-service-stability: true
